# ch32-can-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
scenarios/receive_transmit/: Cargo.toml  README.md  main.rs
scenarios/silent_loopback/: Cargo.toml  README.md  main.rs
src/: can.rs  enums.rs  lib.rs  main.rs  registers.rs  util.rs
