[package]
name = "ch32-can-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../ch32-hal", features = [
  "ch32v208wbu6",
  "defmt",
  "embassy",
], default-features = false }
qingke = { version = "0.1.11" }
qingke-rt = { version = "0.1.11" }
panic-halt = "0.2.0"

embassy-executor = { version = "0.5.0", features = [
  "nightly",
  "integrated-timers",
  "arch-riscv32",
  "executor-thread",
] }
embassy-time = { version = "0.3.0" }
