[package]
name = "ch32-can-rs"
version = "0.1.0"
edition = "2021"

[features]
ch32v203c6t6 = ["ch32-metapac/ch32v203c6t6"]
ch32v203c8t6 = ["ch32-metapac/ch32v203c8t6"]
ch32v203c8u6 = ["ch32-metapac/ch32v203c8u6"]
ch32v203f6p6 = ["ch32-metapac/ch32v203f6p6"]
ch32v203g6u6 = ["ch32-metapac/ch32v203g6u6"]
ch32v203g8r6 = ["ch32-metapac/ch32v203g8r6"]
ch32v203k6t6 = ["ch32-metapac/ch32v203k6t6"]
ch32v203k8t6 = ["ch32-metapac/ch32v203k8t6"]
ch32v203rbt6 = ["ch32-metapac/ch32v203rbt6"]
ch32v208cbu6 = ["ch32-metapac/ch32v208cbu6"]
ch32v208gbu6 = ["ch32-metapac/ch32v208gbu6"]
ch32v208rbt6 = ["ch32-metapac/ch32v208rbt6"]
ch32v208wbu6 = ["ch32-metapac/ch32v208wbu6"]
ch32v303cbt6 = ["ch32-metapac/ch32v303cbt6"]
ch32v303rbt6 = ["ch32-metapac/ch32v303rbt6"]
ch32v303rct6 = ["ch32-metapac/ch32v303rct6"]
ch32v303vct6 = ["ch32-metapac/ch32v303vct6"]
ch32v305fbp6 = ["ch32-metapac/ch32v305fbp6"]
ch32v305gbu6 = ["ch32-metapac/ch32v305gbu6"]
ch32v305rbt6 = ["ch32-metapac/ch32v305rbt6"]
ch32v307rct6 = ["ch32-metapac/ch32v307rct6"]
ch32v307vct6 = ["ch32-metapac/ch32v307vct6"]
ch32v307wcu6 = ["ch32-metapac/ch32v307wcu6"]
# Private feature, only used in test/build
__ci = ["ch32-metapac/ch32v208wbu6"]

[dependencies]
ch32-metapac = { features = [
  "memory-x",
  "rt",
], git = "https://github.com/ch32-rs/ch32-metapac.git", tag = "ch32-data-3e5718747ccd2dc429be042f893ed90b581ce265" }
