[package]
name = "ch32-can-rs-receive-transmit"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-can-rs = { path = "../../", features = ["ch32v208wbu6"] }
ch32-hal = { default-features = false, features = [
    "ch32v208wbu6",
    "defmt",
    "embassy",
    "rt",
], git = "https://github.com/ch32-rs/ch32-hal.git", rev = "f17d8bab1f0161eb200276b33bfc2c39e184ff19" }
qingke = { version = "0.2.0" }
qingke-rt = { version = "0.2.0" }
panic-halt = "0.2.0"

[profile.release]
strip = false   # Symbols are not flashed to the microcontroller, so don't strip them.
opt-level = "z" # Optimize for size.

[[bin]]
name = "receive_transmit"
path = "main.rs"
